--- a/react-backend/client/src/App.css
+++ b/react-backend/client/src/App.css
@@ -1,10 +1,10 @@
 .App {
   text-align: center;
-  background-color: beige;
+  background-color: WhiteSmoke;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 800px;
+  top: 30px;
+  left: 10%;
+  right: 10%;
 }
 
 .mood{
