--- a/react-backend/client/src/ListItem.css
+++ b/react-backend/client/src/ListItem.css
@@ -6,12 +6,14 @@
 }
 
 .title{
+	max-width: 185px;
+	word-wrap: normal;
     padding-top: 10px;
     padding-bottom: 5px;
 }
 
 .img {
-    width: 200px;
-    height: 200px;
+    width: 185px;
+    height: 277px;
     padding-bottom: 5px;
 }
