--- a/react-backend/client/src/Footer.css
+++ b/react-backend/client/src/Footer.css
@@ -4,4 +4,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+	font-size: 14;
+	font-weight: bold;
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
