--- a/react-backend/client/src/index.css
+++ b/react-backend/client/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   width: 800px;
   height: 600px;
 }
